# domain-atlas

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  render.private.yaml  render.yaml
.github/workflows/: ci.yml
docs/: core-workflows-guide.md  private-deployment.md
docs/release-notes/: v0.1.0.md
evals/intake/: cases.v1.json
reports/intake/: 2026-07-17-intake-zh-v1.json  README.md
scripts/: browser_e2e_fixture_app.py  browser_e2e_private_fixture_app.py  browser_e2e_private_owner.py  browser_e2e_public_demo.py  browser_e2e_wiki_layout.py  capture_release_screenshots.py  golden_demo_eval.py  intake_eval.py  live_e2e_domain_build.py  live_guided_e2e.py  regression.py  smoke_providers.py  smoke_public_demo_remote.py
specs/mvp/: plan.md  spec.md  tasks.md
src/domain_atlas/: __init__.py  cli.py
tests/: conftest.py  test_app.py  test_artifact_source_ids.py  test_autopilot.py  test_background_workflow.py  test_backup.py  test_build_workflow.py  test_candidate_assessment.py  test_chat_provider.py  test_deployment_config.py  test_embeddings.py  test_exa_discovery.py  test_golden_demo_evaluation.py  test_ingestion.py  test_intake_assessment.py  test_intake_evaluation.py  test_intake_suggestions.py  test_owner_auth.py  test_projects.py  test_public_demo.py  test_public_demo_remote_smoke.py  test_qa_service.py  test_regional_official_discovery.py  test_resilience.py  test_settings.py  test_source_candidates.py  test_source_policy.py  test_vector_index.py  test_wiki.py  test_wiki_presentation.py
tests/e2e/: test_guided_domain_flow.py  test_guided_reliability_flow.py  test_regional_official_entry_flow.py
tests/fixtures/: guided_reliability_travel_agent.json  live_domain_atlas_seed.md  llm_source_selection_cases.json
(+135 files in other folders)
