[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "domain-atlas"
version = "0.1.0"
description = "Local-first agentic domain learning system."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116,<1",
    "httpx>=0.28,<1",
    "jinja2>=3.1,<4",
    "markdown-it-py>=4,<5",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "chromadb>=1.3,<2",
    "pypdf>=6,<7",
    "python-multipart>=0.0.20,<1",
    "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
    "playwright>=1.46,<2",
    "pyyaml>=6,<7",
    "pytest>=8,<9",
]

[project.scripts]
domain-atlas = "domain_atlas.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "e2e: deterministic end-to-end regression tests",
    "live: tests that call configured external providers",
]

[tool.setuptools.packages.find]
where = ["src"]
